// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Build with optDependencies builds w/ opt dependency installed snapshot build-env 1`] = `
"# Build environment
# package:            root@link:./package.json
# depspec:            dependencies(self)
# envspec:            
# buildIsInProgress:  true
# includeBuildEnv:    true
# includeCurrentEnv:  false
# includeNpmBin:      false


#
# optDep@1.0.0
#
export CAML_LD_LIBRARY_PATH=\\"%esyStorePath%/i/%optdepid%/stublibs:%esyStorePath%/i/%optdepid%/lib/stublibs:$CAML_LD_LIBRARY_PATH\\"
export OCAMLPATH=\\"%esyStorePath%/i/%optdepid%/lib:$OCAMLPATH\\"
export MAN_PATH=\\"%esyStorePath%/i/%optdepid%/man:$MAN_PATH\\"
export PATH=\\"%esyStorePath%/i/%optdepid%/bin:$PATH\\"

#
# dep@1.0.0
#
export CAML_LD_LIBRARY_PATH=\\"%esyStorePath%/i/%depid%/stublibs:%esyStorePath%/i/%depid%/lib/stublibs:$CAML_LD_LIBRARY_PATH\\"
export OCAMLPATH=\\"%esyStorePath%/i/%depid%/lib:$OCAMLPATH\\"
export MAN_PATH=\\"%esyStorePath%/i/%depid%/man:$MAN_PATH\\"
export PATH=\\"%esyStorePath%/i/%depid%/bin:$PATH\\"

#
# root@1.0.0
#
export OCAMLFIND_LDCONF=\\"ignore\\"
export OCAMLFIND_DESTDIR=\\"%projectPath%/_esy/default/store/i/%id%/lib\\"
export cur__etc=\\"%projectPath%/_esy/default/store/i/%id%/etc\\"
export cur__share=\\"%projectPath%/_esy/default/store/i/%id%/share\\"
export cur__toplevel=\\"%projectPath%/_esy/default/store/i/%id%/toplevel\\"
export cur__stublibs=\\"%projectPath%/_esy/default/store/i/%id%/stublibs\\"
export cur__doc=\\"%projectPath%/_esy/default/store/i/%id%/doc\\"
export cur__man=\\"%projectPath%/_esy/default/store/i/%id%/man\\"
export cur__lib=\\"%projectPath%/_esy/default/store/i/%id%/lib\\"
export cur__sbin=\\"%projectPath%/_esy/default/store/i/%id%/sbin\\"
export cur__bin=\\"%projectPath%/_esy/default/store/i/%id%/bin\\"
export cur__install=\\"%projectPath%/_esy/default/store/i/%id%\\"
export cur__target_dir=\\"%projectPath%/_esy/default/store/b/%id%\\"
export cur__original_root=\\"%projectPath%\\"
export cur__root=\\"%projectPath%\\"
export cur__dev=\\"true\\"
export cur__version=\\"1.0.0\\"
export cur__name=\\"root\\"
export DUNE_BUILD_DIR=\\"%projectPath%/_esy/default/store/b/%id%\\"

#
# Built-in
#
export SHELL=\\"env -i /bin/bash --norc --noprofile\\"
export PATH=\\"$PATH:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin\\""
`;

exports[`Build with optDependencies builds w/ opt dependency installed snapshot build-env 2`] = `
"# Build environment
# package:            dep@path:dep
# depspec:            dependencies(self)
# envspec:            
# buildIsInProgress:  true
# includeBuildEnv:    true
# includeCurrentEnv:  false
# includeNpmBin:      false


#
# optDep@1.0.0
#
export CAML_LD_LIBRARY_PATH=\\"%esyStorePath%/i/%optdepid%/stublibs:%esyStorePath%/i/%optdepid%/lib/stublibs:$CAML_LD_LIBRARY_PATH\\"
export OCAMLPATH=\\"%esyStorePath%/i/%optdepid%/lib:$OCAMLPATH\\"
export MAN_PATH=\\"%esyStorePath%/i/%optdepid%/man:$MAN_PATH\\"
export PATH=\\"%esyStorePath%/i/%optdepid%/bin:$PATH\\"

#
# dep@1.0.0
#
export OCAMLFIND_LDCONF=\\"ignore\\"
export OCAMLFIND_DESTDIR=\\"%esyStorePath%/s/%id%/lib\\"
export cur__etc=\\"%esyStorePath%/s/%id%/etc\\"
export cur__share=\\"%esyStorePath%/s/%id%/share\\"
export cur__toplevel=\\"%esyStorePath%/s/%id%/toplevel\\"
export cur__stublibs=\\"%esyStorePath%/s/%id%/stublibs\\"
export cur__doc=\\"%esyStorePath%/s/%id%/doc\\"
export cur__man=\\"%esyStorePath%/s/%id%/man\\"
export cur__lib=\\"%esyStorePath%/s/%id%/lib\\"
export cur__sbin=\\"%esyStorePath%/s/%id%/sbin\\"
export cur__bin=\\"%esyStorePath%/s/%id%/bin\\"
export cur__install=\\"%esyStorePath%/s/%id%\\"
export cur__target_dir=\\"%esyStorePath%/b/%id%\\"
export cur__original_root=\\"%esyPrefixPath%/esyi/source/i/dep--67b360d9a56facfd6fc9b90817f589ec\\"
export cur__root=\\"%esyPrefixPath%/esyi/source/i/dep--67b360d9a56facfd6fc9b90817f589ec\\"
export cur__dev=\\"false\\"
export cur__version=\\"1.0.0\\"
export cur__name=\\"dep\\"
export DUNE_BUILD_DIR=\\"%esyStorePath%/b/%id%\\"

#
# Built-in
#
export SHELL=\\"env -i /bin/bash --norc --noprofile\\"
export PATH=\\"$PATH:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin\\""
`;

exports[`Build with optDependencies builds w/o opt dependency installed snapshot build-env 1`] = `
"# Build environment
# package:            root@link:./package.json
# depspec:            dependencies(self)
# envspec:            
# buildIsInProgress:  true
# includeBuildEnv:    true
# includeCurrentEnv:  false
# includeNpmBin:      false


#
# dep@1.0.0
#
export CAML_LD_LIBRARY_PATH=\\"%esyStorePath%/i/%depid%/stublibs:%esyStorePath%/i/%depid%/lib/stublibs:$CAML_LD_LIBRARY_PATH\\"
export OCAMLPATH=\\"%esyStorePath%/i/%depid%/lib:$OCAMLPATH\\"
export MAN_PATH=\\"%esyStorePath%/i/%depid%/man:$MAN_PATH\\"
export PATH=\\"%esyStorePath%/i/%depid%/bin:$PATH\\"

#
# root@1.0.0
#
export OCAMLFIND_LDCONF=\\"ignore\\"
export OCAMLFIND_DESTDIR=\\"%projectPath%/_esy/default/store/i/%id%/lib\\"
export cur__etc=\\"%projectPath%/_esy/default/store/i/%id%/etc\\"
export cur__share=\\"%projectPath%/_esy/default/store/i/%id%/share\\"
export cur__toplevel=\\"%projectPath%/_esy/default/store/i/%id%/toplevel\\"
export cur__stublibs=\\"%projectPath%/_esy/default/store/i/%id%/stublibs\\"
export cur__doc=\\"%projectPath%/_esy/default/store/i/%id%/doc\\"
export cur__man=\\"%projectPath%/_esy/default/store/i/%id%/man\\"
export cur__lib=\\"%projectPath%/_esy/default/store/i/%id%/lib\\"
export cur__sbin=\\"%projectPath%/_esy/default/store/i/%id%/sbin\\"
export cur__bin=\\"%projectPath%/_esy/default/store/i/%id%/bin\\"
export cur__install=\\"%projectPath%/_esy/default/store/i/%id%\\"
export cur__target_dir=\\"%projectPath%/_esy/default/store/b/%id%\\"
export cur__original_root=\\"%projectPath%\\"
export cur__root=\\"%projectPath%\\"
export cur__dev=\\"true\\"
export cur__version=\\"1.0.0\\"
export cur__name=\\"root\\"
export DUNE_BUILD_DIR=\\"%projectPath%/_esy/default/store/b/%id%\\"

#
# Built-in
#
export SHELL=\\"env -i /bin/bash --norc --noprofile\\"
export PATH=\\"$PATH:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin\\""
`;

exports[`Build with optDependencies builds w/o opt dependency installed snapshot build-env 2`] = `
"# Build environment
# package:            dep@path:dep
# depspec:            dependencies(self)
# envspec:            
# buildIsInProgress:  true
# includeBuildEnv:    true
# includeCurrentEnv:  false
# includeNpmBin:      false


#
# dep@1.0.0
#
export OCAMLFIND_LDCONF=\\"ignore\\"
export OCAMLFIND_DESTDIR=\\"%esyStorePath%/s/%id%/lib\\"
export cur__etc=\\"%esyStorePath%/s/%id%/etc\\"
export cur__share=\\"%esyStorePath%/s/%id%/share\\"
export cur__toplevel=\\"%esyStorePath%/s/%id%/toplevel\\"
export cur__stublibs=\\"%esyStorePath%/s/%id%/stublibs\\"
export cur__doc=\\"%esyStorePath%/s/%id%/doc\\"
export cur__man=\\"%esyStorePath%/s/%id%/man\\"
export cur__lib=\\"%esyStorePath%/s/%id%/lib\\"
export cur__sbin=\\"%esyStorePath%/s/%id%/sbin\\"
export cur__bin=\\"%esyStorePath%/s/%id%/bin\\"
export cur__install=\\"%esyStorePath%/s/%id%\\"
export cur__target_dir=\\"%esyStorePath%/b/%id%\\"
export cur__original_root=\\"%esyPrefixPath%/esyi/source/i/dep--67b360d9a56facfd6fc9b90817f589ec\\"
export cur__root=\\"%esyPrefixPath%/esyi/source/i/dep--67b360d9a56facfd6fc9b90817f589ec\\"
export cur__dev=\\"false\\"
export cur__version=\\"1.0.0\\"
export cur__name=\\"dep\\"
export DUNE_BUILD_DIR=\\"%esyStorePath%/b/%id%\\"

#
# Built-in
#
export SHELL=\\"env -i /bin/bash --norc --noprofile\\"
export PATH=\\"$PATH:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin\\""
`;
